Updated landing page
- Added logo and directions to main page

--- a/app/src/main/res/layout/connect_activity.xml
+++ b/app/src/main/res/layout/connect_activity.xml
@@ -37,9 +37,25 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connect to your device here"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="281dp"
+        android:text="Press the Bluetooth button to connect to your device"
+        app:layout_constraintEnd_toEndOf="@+id/container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topbar"
+        android:textSize="16sp"
+        android:layout_centerInParent="true"
+        android:gravity="center"
         tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/topbar"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/bmes_ucla_logo__gear_" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
