--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -9,6 +9,11 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="false">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -302,5 +307,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
